# alarm

./: .gitignore  CMakeLists.txt  partitions.csv  release_com_port.bat  release_com_port.ps1  sdkconfig.defaults  项目说明.md
.codex_tmp/: blufi_example_main.c.before  display_service.c.before  项目说明.md.before
main/: CMakeLists.txt  DISPLAY_IMAGE_GUIDE.md  Kconfig.projbuild  alarm2.4.ino  audio_cache_service.c  audio_cache_service.h  audio_service.c  audio_service.h  blufi_example_main.c  device_cloud_service.c  device_cloud_service.h  display_config.h  display_lvgl.c  display_lvgl.h  display_lvgl_port_cfg.h  display_service.c  display_service.h  idf_component.yml  lv_conf.h  playback_task_service.c  playback_task_service.h  rtc_service.c  rtc_service.h  status_lvgl_image.c  status_lvgl_image.h  storage_service.c  storage_service.h  time_service.c  time_service.h  ui_bridge.c  ui_bridge.h  weather_lvgl_image.c  weather_lvgl_image.h
main/display/: display_canvas.h  display_status_icon_renderer.c  display_status_icon_renderer.h  display_view_model.h  display_weather_icon_renderer.c  display_weather_icon_renderer.h  display_weather_icon_types.h
main/fonts/: SourceHanSans_Normal_16.c  SourceHanSans_Normal_60.c  app_fonts.h
main/status/: status_presenter.c  status_presenter.h
main/ui/: .eez-project-build  fonts.h  screens.c  screens.h  styles.c  styles.h  ui_font_source_han_sans_sc_normal.c  ui_font_source_han_sans_sc_normal_16.c  ui_font_source_hans_sans_sc_normal_60.c
main/ui/alarm_design/: alarm_design.eez-project-ui-state
main/weather/: weather_device_service_provider.c  weather_device_service_provider.h  weather_mock_provider.c  weather_mock_provider.h  weather_presenter.c  weather_presenter.h  weather_types.h
main/weather/icons/: weather_clear_day_64.c  weather_clear_night_64.c
main/wifi/: wifi_signal_mapper.c  wifi_signal_mapper.h
tools/weather_icon_png_export/: README.md  export_weather_icons.c
