idf_component_register(SRCS "blufi_example_main.c"
                            "blufi_security.c"
                            "blufi_init.c"
                            "display_lvgl.c"
                            "display_service.c"
                            "fonts/SourceHanSans_Normal_16.c"
                            "display/display_status_icon_renderer.c"
                            "display/display_weather_icon_renderer.c"
                            "status/status_presenter.c"
                            "weather/weather_presenter.c"
                            "weather/weather_mock_provider.c"
                            "time_service.c"
                            "rtc_service.c"
                            "wifi/wifi_signal_mapper.c"
                            "ui_bridge.c"
                            "weather_lvgl_image.c"
                            "weather/icons/weather_clear_day_64.c"
                            "ui/ui.c"
                            "ui/screens.c"
                            "ui/styles.c"
                            "ui/images.c"
                            "ui/ui_font_source_han_sans_sc_normal_16.c"
                            "ui/ui_font_source_hans_sans_sc_normal_60.c"
                    PRIV_REQUIRES bt
                                  nvs_flash
                                  mbedtls
                                  esp_driver_i2c
                                  esp_driver_gpio
                                  esp_driver_spi
                                  esp_lcd
                                  spiffs
                                  lwip
                                  lvgl
                                  esp_lvgl_port
                    INCLUDE_DIRS "."
                                 "ui"
                                 "display"
                                 "status"
                                 "weather"
                                 "wifi")
